fix(MultiStepDialog): active step text contrast (a11y) (#7206)

--- a/packages/core/src/components/dialog/_multistep-dialog.scss
+++ b/packages/core/src/components/dialog/_multistep-dialog.scss
@@ -196,7 +196,7 @@ $step-radius: $pt-border-radius * 2 !default;
   }
 
   .#{$ns}-active.#{$ns}-dialog-step-viewed & {
-    background-color: $blue4;
+    background-color: $blue3;
   }
 
   .#{$ns}-dialog-step-viewed & {
@@ -215,7 +215,7 @@ $step-radius: $pt-border-radius * 2 !default;
 
   // step title is active only when the step is selected
   .#{$ns}-active.#{$ns}-dialog-step-viewed & {
-    color: $blue4;
+    color: $blue3;
   }
 
   .#{$ns}-dialog-step-viewed:not(.#{$ns}-active) & {
